[shenker/image_analysis,image_analysis] Drift correction with trench_cell_endpoints and find_feature_drift works on a 500x500 FOV crop. Implemented saturation so rois do not shift wildly when cells dim upon FISH fixation.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
@@ -811,10 +811,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "trenches[\"ul_x\"]"
+    "info"
    ]
   },
   {
@@ -838,7 +840,7 @@
    },
    "outputs": [],
    "source": [
-    "info"
+    "diag[\"labeling\"][\"set_finding\"].keys()"
    ]
   },
   {
@@ -850,7 +852,7 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"].keys()"
+    "diag[\"labeling\"][\"set_finding\"][\"profiles\"]"
    ]
   },
   {
@@ -862,130 +864,13 @@
    },
    "outputs": [],
    "source": [
-    "diag[\"labeling\"][\"set_finding\"][\"profiles\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "diag[\"bboxes\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "diag[\"label_1\"][\"find_trench_ends\"].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "image_limits = geometry.get_image_limits(imgs[0].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def median_translation(data, diagnostics=None, **kwargs):\n",
-    "    # plt.hist(data[:, 1, 0] - data[:, 0, 0], bins=10);\n",
-    "    median = np.median(data[:, 1, :] - data[:, 0, :], axis=0)\n",
-    "    return np.array([median[0], 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def mock_features(img):\n",
-    "    # print(img.shape);0/0\n",
-    "    return np.array([[img.shape[1] / 2, 5], [img.shape[1] / 2, img.shape[0] - 5]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "rois = (\n",
-    "    trenches  # trenches[(trenches[\"trench_set\"] == 2) & (trenches[\"top_x\"] < 100)][2:3]\n",
-    ")\n",
-    "t0 = 20\n",
-    "t1 = 225\n",
-    "# ts = np.arange(t0 + 1, t1)\n",
-    "# ts = [160,183]\n",
-    "ts = [21]\n",
-    "shifts = {}\n",
-    "shifts[t0] = np.array([0, 0])\n",
-    "# shifts[t0] = np.array([0, 0])\n",
-    "correspondences = {}\n",
-    "features = {}\n",
-    "for t in tqdm(ts):\n",
-    "    diag = {}\n",
-    "    # shift = drift.find_feature_drift(\n",
-    "    #     imgs[t - 1],\n",
-    "    #     imgs[t],\n",
-    "    #     trenches,\n",
-    "    #     initial_shift=shifts[t - 1],\n",
-    "    #     estimation_func=median_translation,\n",
-    "    #     max_iterations=3,\n",
-    "    #     diagnostics=diag,\n",
-    "    # )\n",
-    "    # if t > 180:\n",
-    "    #     f = drift.trench_cell_endpoints\n",
-    "    # else:\n",
-    "    #     f = mock_features\n",
-    "    shift = drift.find_feature_drift(\n",
-    "        imgs[t0],\n",
-    "        imgs[t],\n",
-    "        rois,\n",
-    "        initial_shift=shifts[t0],\n",
-    "        # feature_func=mock_features,\n",
-    "        estimation_func=median_translation,\n",
-    "        max_iterations=1,\n",
-    "        diagnostics=diag,\n",
-    "    )\n",
-    "    shifts[t] = shift\n",
-    "    # correspondences[t] = diag[\"correspondences\"]\n",
-    "    features[t] = diag[\"features2\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70",
+   "id": "64",
    "metadata": {
     "tags": []
    },
@@ -1004,13 +889,353 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "65",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "shifts"
+    "image_limits = geometry.get_image_limits(imgs[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def mock_features(img):\n",
+    "    # print(img.shape);0/0\n",
+    "    # return np.array([[img.shape[1] / 2, 5], [img.shape[1] / 2, img.shape[0] - 5]])\n",
+    "    return np.array([[0, 0], [img.shape[1] - 1, img.shape[0] - 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def median_translation(data, diagnostics=None, **kwargs):\n",
+    "    # plt.hist(data[:, 1, 0] - data[:, 0, 0], bins=10);\n",
+    "    median = np.median(data[:, 1, :] - data[:, 0, :], axis=0)\n",
+    "    return median\n",
+    "    # return np.array([median[0], 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = imgs[0][:100, :100].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[:] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rois = trenches  # [(trenches[\"trench_set\"] == 1)][21:25]\n",
+    "t0 = 20\n",
+    "t1 = 225\n",
+    "ts = np.arange(t0 + 1, t1)\n",
+    "# ts = np.arange(200, t1)\n",
+    "# ts = [160,183]\n",
+    "# ts = [100]\n",
+    "shifts = {}\n",
+    "shifts[t0] = np.array([0, 0])\n",
+    "# shifts[t0] = np.array([0, 0])\n",
+    "features_plot = {}\n",
+    "rois_plot = {}\n",
+    "rois_final_plot = {}\n",
+    "for t in tqdm(ts):\n",
+    "    diag = {}\n",
+    "    # shift = drift.find_feature_drift(\n",
+    "    #     imgs[t - 1],\n",
+    "    #     imgs[t],\n",
+    "    #     trenches,\n",
+    "    #     initial_shift=shifts[t - 1],\n",
+    "    #     estimation_func=median_translation,\n",
+    "    #     max_iterations=3,\n",
+    "    #     diagnostics=diag,\n",
+    "    # )\n",
+    "    # if t > 180:\n",
+    "    #     f = drift.trench_cell_endpoints\n",
+    "    # else:\n",
+    "    #     f = mock_features\n",
+    "    shift = drift.find_feature_drift(\n",
+    "        imgs[t0],\n",
+    "        # imgs[t-1],\n",
+    "        imgs[t],\n",
+    "        rois,\n",
+    "        initial_shift=shifts[t0],\n",
+    "        # feature_func=mock_features,\n",
+    "        # feature_func=drift.centroid,\n",
+    "        estimation_func=median_translation,\n",
+    "        max_iterations=2,\n",
+    "        diagnostics=diag,\n",
+    "    )\n",
+    "    shifts[t] = shift\n",
+    "    # correspondences[t] = diag[\"correspondences\"]\n",
+    "    features_plot[t] = diag[\"features2\"]\n",
+    "    rois_plot[t] = diag[\"rois2\"]\n",
+    "    rois_final_plot[t] = diag[\"rois_final\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts2 = ts[-30:]\n",
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts2}) * hv.HoloMap(\n",
+    "    {t: rois_final_plot[t] for t in ts2},\n",
+    ") * hv.HoloMap({t: features_plot[t] for t in ts2}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
+    "    {t: rois_final_plot[t] for t in ts},\n",
+    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
+    "    {t: rois_final_plot[t] for t in ts},\n",
+    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
+    "    {\n",
+    "        t: trench_detection.plot_trenches(geometry.filter_rois(trenches, image_limits))\n",
+    "        for t in ts\n",
+    "    },\n",
+    ") * hv.HoloMap({t: features[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features[100].options(invert_yaxis=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "trenches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi = trenches.iloc[1]\n",
+    "top = (roi[\"top_x\"], roi[\"top_y\"])\n",
+    "bottom = (roi[\"bottom_x\"], roi[\"bottom_y\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = trench_detection.profile.profile_line(\n",
+    "    imgs[21], top[::-1], bottom[::-1], linewidth=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(res.mean(axis=0));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iter_roi_lines(rois):\n",
+    "    index = rois.index.values\n",
+    "    top_x = rois[\"top_x\"].values\n",
+    "    top_y = rois[\"top_y\"].values\n",
+    "    bottom_x = rois[\"bottom_x\"].values\n",
+    "    bottom_y = rois[\"bottom_y\"].values\n",
+    "    for i in range(len(index)):\n",
+    "        roi_idx = index[i]\n",
+    "        yield roi_idx, np.array([top_x[i], top_y[i]]), np.array(\n",
+    "            [bottom_x[i], bottom_y[i]]\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "def line_shift(img, rois, linewidth=8):\n",
+    "    for roi_idx, top, bottom in iter_roi_lines(rois):\n",
+    "        res = trench_detection.profile.profile_line(\n",
+    "            img, top[::-1], bottom[::-1], linewidth=linewidth\n",
+    "        )\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def find_line_drift(\n",
+    "    img1,\n",
+    "    img2,\n",
+    "    trenches,\n",
+    "    diagnostics=None,\n",
+    "):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profiles = {}\n",
+    "for roi_idx, top, bottom in iter_roi_lines(rois):\n",
+    "    res = trench_detection.profile.profile_line(\n",
+    "        imgs[0], top[::-1], bottom[::-1], linewidth=10\n",
+    "    )\n",
+    "    profiles[roi_idx] = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profiles2 = {}\n",
+    "for roi_idx, top, bottom in iter_roi_lines(rois):\n",
+    "    res = trench_detection.profile.profile_line(\n",
+    "        imgs[40], top[::-1], bottom[::-1], linewidth=10\n",
+    "    )\n",
+    "    profiles2[roi_idx] = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 20\n",
+    "plt.plot(profiles[idx].mean(axis=0))\n",
+    "plt.plot(profiles2[idx].mean(axis=0));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.mean(np.concatenate(list(profiles.values())), axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, res in profiles.items():\n",
+    "    horiz = res.mean(axis=0)\n",
+    "    horiz = horiz / horiz.max()\n",
+    "    plt.plot(horiz);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, res in profiles.items():\n",
+    "    vert = res.mean(axis=1)\n",
+    "    # vert = vert / vert.max()\n",
+    "    plt.plot(vert);"
    ]
   }
  ],
