[image_analysis,shenker/image_analysis] Cleanup.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230712 Drift correction.ipynb
@@ -933,26 +933,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = imgs[0][:100, :100].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[:] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -991,7 +971,7 @@
     "        # imgs[t-1],\n",
     "        imgs[t],\n",
     "        rois,\n",
-    "        initial_shift=shifts[t0],\n",
+    "        initial_shift2=shifts[t - 1],\n",
     "        # feature_func=mock_features,\n",
     "        # feature_func=drift.centroid,\n",
     "        estimation_func=median_translation,\n",
@@ -1008,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,31 +1001,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
+    "    {t: rois_final_plot[t] for t in ts},\n",
+    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
+    "    {t: rois_final_plot[t] for t in ts},\n",
+    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
-    "    {t: rois_final_plot[t] for t in ts},\n",
-    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts}) * hv.HoloMap(\n",
-    "    {t: rois_final_plot[t] for t in ts},\n",
-    ") * hv.HoloMap({t: features_plot[t] for t in ts}).opts(color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -1082,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
