[image_analysis,shenker/image_analysis] WIP GRS analysis. Colored kymographs done.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230713 230707_repressilators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230713 230707_repressilators.ipynb
@@ -162,9 +162,12 @@
    "source": [
     "colors = {\n",
     "    \"BF\": \"#ffffff\",\n",
-    "    \"CFP-EM\": \"#f44336\",  # TODO\n",
-    "    \"YFP-EM\": \"#03a9f4\",\n",
-    "    \"RFP-EM\": \"#8bc34a\",\n",
+    "    # \"CFP-EM\": \"#6fb2e4\",\n",
+    "    # \"YFP-EM\": \"#eee461\",\n",
+    "    # \"RFP-EM\": \"#c66526\",\n",
+    "    \"CFP-EM\": \"#648FFF\",\n",
+    "    \"YFP-EM\": \"#FFB000\",\n",
+    "    \"RFP-EM\": \"#DC267F\",\n",
     "}\n",
     "\n",
     "fish_colors = {\n",
@@ -353,7 +356,9 @@
     "\n",
     "def _pad(ary, shape):\n",
     "    return np.pad(\n",
-    "        ary, [(0, max(goal - current, 0)) for goal, current in zip(shape, ary.shape)]\n",
+    "        ary,\n",
+    "        [(0, max(goal - current, 0)) for goal, current in zip(shape, ary.shape)],\n",
+    "        constant_values=np.nan,\n",
     "    )\n",
     "\n",
     "\n",
@@ -410,6 +415,7 @@
    "source": [
     "segmentation_channel = \"RFP-EM\"\n",
     "measurement_channels = [\"CFP-EM\", \"YFP-EM\", \"RFP-EM\"]\n",
+    "channel_colors = [colors[channel] for channel in measurement_channels]\n",
     "width_to_pitch_ratio = 1.4 / 3.5\n",
     "k1 = 8.947368421052635e-10"
    ]
@@ -757,7 +763,7 @@
     "    .droplevel(0, axis=1)\n",
     "    # .droplevel([\"position\"])\n",
     "    # .reset_index(\"roi_idx\")\n",
-    ")"
+    ").loc[:, [\"CFP-EM\", \"YFP-EM\", \"RFP-EM\"]]"
    ]
   },
   {
@@ -797,11 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def norm(x, quantile=0.9):\n",
-    "    if quantile is None or quantile == 0:\n",
-    "        return x\n",
-    "    else:\n",
-    "        return x / x.quantile(quantile)"
+    "x = norm(df2.loc[(11, 21)].loc[IDX[40:], :])"
    ]
   },
   {
@@ -811,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = norm(df2.loc[(11, 21)].loc[IDX[40:], :])"
+    "pd.plotting.autocorrelation_plot(x[\"CFP-EM\"])"
    ]
   },
   {
@@ -821,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.plotting.autocorrelation_plot(x[\"CFP-EM\"])"
+    "df2.reset_index()[df2.reset_index()[\"roi_idx\"] == 244]"
    ]
   },
   {
@@ -831,7 +833,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.reset_index()[df2.reset_index()[\"roi_idx\"] == 244]"
+    "norm(df2.loc[(11, 244)].loc[IDX[40:], :]).hvplot()"
    ]
   },
   {
@@ -841,23 +843,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm(df2.loc[(11, 244)].loc[IDX[40:], :]).hvplot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "(df2.index.get_level_values(\"roi_idx\") == 244).sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,11 +871,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm(groups[5][1].droplevel([\"position\", \"roi_idx\"])).hvplot(color=channel_colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm(groups[5][1].droplevel([\"position\", \"roi_idx\"])).hvplot()"
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        t: norm(\n",
+    "            groups[t][1].droplevel([\"position\", \"roi_idx\"]).loc[IDX[40:], :]\n",
+    "        ).hvplot(cmap=cmap)\n",
+    "        for t in range(2)\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -893,14 +902,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.HoloMap(\n",
-    "    {\n",
-    "        t: norm(\n",
-    "            groups[t][1].droplevel([\"position\", \"roi_idx\"]).loc[IDX[40:], :]\n",
-    "        ).hvplot()\n",
-    "        for t in range(2)\n",
-    "    }\n",
-    ")"
+    "osc_roi_idxs = [\n",
+    "    21,\n",
+    "    57,\n",
+    "    67,\n",
+    "    103,\n",
+    "    105,\n",
+    "    107,\n",
+    "    116,\n",
+    "    149,\n",
+    "    162,\n",
+    "    170,\n",
+    "    185,\n",
+    "    191,\n",
+    "    215,\n",
+    "    237,\n",
+    "    246,\n",
+    "    252,\n",
+    "    268,\n",
+    "    285,\n",
+    "    302,\n",
+    "    319,\n",
+    "    321,\n",
+    "    342,\n",
+    "    346,\n",
+    "    375,\n",
+    "    417,\n",
+    "    432,\n",
+    "    453,\n",
+    "    454,\n",
+    "    457,\n",
+    "    462,\n",
+    "    463,\n",
+    "    535,\n",
+    "    567,\n",
+    "    588,\n",
+    "    600,\n",
+    "    638,\n",
+    "    644,\n",
+    "    650,\n",
+    "    677,\n",
+    "    680,\n",
+    "    690,\n",
+    "    707,\n",
+    "]"
    ]
   },
   {
@@ -910,8 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 21, 57, 67, 103, 105, 107, 116, 149, 162, 170, 185, 191, 215, 237, 246, 252, 268, 285, 302, 319, 321, 342, 346, 375, 417, 432, 453, 454, 457, 462, 463\n",
-    "# 535, 567, 588, 600, 638, 644, 650, 677, 680, 690, 707"
+    "len(osc_roi_idxs)"
    ]
   },
   {
@@ -956,7 +1000,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(z[1][0][1].T)"
+    "image.unstack(x[40:, 0]).shape"
    ]
   },
   {
@@ -966,13 +1010,178 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "measurement_channels"
+    "def trim_axes(ary, mask):\n",
+    "    for i in range(ary.ndim):\n",
+    "        axis_mask = ~np.all(mask, axis=tuple([j for j in range(mask.ndim) if j != i]))\n",
+    "        ary = ary[(*[slice(None)] * i, axis_mask)]\n",
+    "    return ary"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def norm(x, quantile=0.9, min_quantile=0.1, mask_value=None):\n",
+    "    if mask_value is None:\n",
+    "        values = x\n",
+    "    else:\n",
+    "        values = x[x != mask_value]\n",
+    "    x = x - np.nanquantile(x, min_quantile)\n",
+    "    if quantile is None or quantile == 0:\n",
+    "        return x\n",
+    "    elif quantile == 1:\n",
+    "        return x / np.nanmax(x)\n",
+    "    else:\n",
+    "        if hasattr(x, \"quantile\"):\n",
+    "            return x / x.quantile(quantile)\n",
+    "        else:\n",
+    "            return x / np.nanquantile(x, quantile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.asarray(z[567, :t_max, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.concatenate(\n",
+    "        [\n",
+    "            image.colorize(\n",
+    "                image.unstack(norm(ary[40:140, i], 0.999))[np.newaxis],\n",
+    "                [channel_colors[i]],\n",
+    "            )\n",
+    "            for i in range(ary.shape[1])\n",
+    "        ],\n",
+    "        axis=0,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    image.colorize(\n",
+    "        image.unstack(norm(ary[40:140, 0], 0.999))[np.newaxis], [channel_colors[0]]\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[image.unstack(norm(ary[40:140, i], 0.999)) for i in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.concatenate(\n",
+    "        [image.unstack(norm(ary[40:140, i], 0.999)) for i in range(3)], axis=0\n",
+    "    ),\n",
+    "    scale=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(\n",
+    "    np.concatenate(\n",
+    "        [image.unstack(norm(ary[40:140, i], 0.999)) for i in range(3)], axis=0\n",
+    "    ),\n",
+    "    scale=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image([image.unstack(x[40:, i]) for i in range(3)], scale=0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(\n",
+    "    image.unstack_multichannel(x[10], [colors[ch] for ch in measurement_channels])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(x[1].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(z[1][0][1].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measurement_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "76",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -1064,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "83",
    "metadata": {
     "tags": []
    },
@@ -1173,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "85",
    "metadata": {
     "tags": []
    },
@@ -1219,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "86",
    "metadata": {
     "tags": []
    },
@@ -1231,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "87",
    "metadata": {
     "tags": []
    },
@@ -1243,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1255,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,10 +1487,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "id": "91",
+   "metadata": {},
    "source": [
     "# Segmentation"
    ]
@@ -1289,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1302,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1327,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1342,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1354,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1366,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1378,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1399,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1411,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1423,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1435,7 +1642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1449,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1461,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1473,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1485,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1498,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1510,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1522,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1534,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1546,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1558,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1570,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1590,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1611,7 +1818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "115",
    "metadata": {
     "tags": []
    },
@@ -1623,7 +1830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "116",
    "metadata": {
     "tags": []
    },
@@ -1645,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "117",
    "metadata": {
     "tags": []
    },
@@ -1657,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "118",
    "metadata": {
     "tags": []
    },
@@ -1683,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "119",
    "metadata": {
     "tags": []
    },
@@ -1695,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "122",
    "metadata": {
     "tags": []
    },
@@ -1747,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "123",
    "metadata": {
     "tags": []
    },
@@ -1770,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "124",
    "metadata": {
     "tags": []
    },
@@ -1785,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "125",
    "metadata": {
     "tags": []
    },
@@ -1797,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "126",
    "metadata": {
     "tags": []
    },
@@ -1811,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "127",
    "metadata": {
     "tags": []
    },
@@ -1825,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "128",
    "metadata": {
     "tags": []
    },
@@ -1839,7 +2046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "129",
    "metadata": {
     "tags": []
    },
