[shenker/image_analysis] Tweaks.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230607 FISH.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230607 FISH.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "from paulssonlab.image_analysis import *\n",
-    "from paulssonlab.util.ui import display_image"
+    "from paulssonlab.image_analysis.ui import display_image"
    ]
   },
   {
@@ -1210,6 +1210,7 @@
     "    # print(msg[\"metadata\"],msg[\"image\"].shape)\n",
     "    fish_img = msg[\"image\"]\n",
     "    fish_img_corrected = delayed(calibrate_image)(fish_img, k1=k1)\n",
+    "    fov = msg[\"metadata\"][\"fov\"]\n",
     "    t = msg[\"metadata\"][\"t\"]\n",
     "    channel = msg[\"metadata\"][\"channel\"]\n",
     "    fish_channels.add(channel)\n",
@@ -1444,7 +1445,7 @@
    },
    "outputs": [],
    "source": [
-    "fish_thresholds = {\"GFP\": 0.007, \"Cy5\": 0.005, \"Cy7\": 0.001}"
+    "fish_thresholds = {\"GFP\": 0.007, \"Cy5\": 0.005, \"Cy7\": 0.002}"
    ]
   },
   {
@@ -1507,7 +1508,7 @@
    "outputs": [],
    "source": [
     "# idx = 1901\n",
-    "idx = 2350"
+    "idx = 3002"
    ]
   },
   {
@@ -1880,7 +1881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
