--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230615 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230615 Trench detection.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "from paulssonlab.image_analysis import *\n",
-    "from paulssonlab.util.ui import display_image"
+    "from paulssonlab.image_analysis.ui import display_image"
    ]
   },
   {
@@ -205,7 +205,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "nd2.metadata[\"channels\"]"
@@ -285,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
