--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230708 Mosaic animation 220819_luis_zring FISH.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230708 Mosaic animation 220819_luis_zring FISH.ipynb
@@ -403,7 +403,7 @@
     "#         np.repeat(max_zoom, 3*8*len(fish_cycles)),\n",
     "#     )\n",
     "# )\n",
-    "# timepoints = it.cycle(np.repeat(fish_cycles, 8))\n",
+    "# timepoints = it.cycle(np.repeat(fish_cycles, num_repeats))\n",
     "# channels = it.repeat(default_channels)\n",
     "\n",
     "# scale = [8]*30\n",
